tests/endtoend/failure/expected/error_bad_return_elif.compile.out
error_bad_return_elif.silly:7:5: error: RETURN is not currently allowed in a ELIF block
    7 |     RETURN 0;
      |     ^
